Fix the wrapping propblem in some popups

--- a/tenor_web/src/styles/globals.css
+++ b/tenor_web/src/styles/globals.css
@@ -52,7 +52,13 @@
     list-style: inherit;
   }
 
-  .markdown-content {
+  .markdown-content{ 
+    word-wrap: break-word;
+    overflow-wrap: break-word;
+    word-break: break-all;
+  }
+
+  .wrap-properly {
     word-wrap: break-word;
     overflow-wrap: break-word;
     word-break: break-all;
